# avro-nix

./: .gitignore  README.md  flake.nix  item.avro  maskfile.md  shell.nix
adapters/go/: go.mod
adapters/go/cmd/demo/: main.go
adapters/go/cmd/server/: main.go
adapters/go/item/: memory.go  model.go  repository.go  rpc_client.go
adapters/python/: demo.py  pyproject.toml  server.py
adapters/python/avro_adapters/item/: memory.py  model.py  repository.py
adapters/python/item/: rpc_client.py
models/: item.avsc
nix/modules/: ports.nix
nix/pkgs/: go.nix  python.nix
ports/item/: repository.avpr
readers/go/: go.mod  go.sum  main.go
scripts/: read_item.py
scripts/go/: go.mod  main.go
